--- a/src/input.css
+++ b/src/input.css
@@ -8,4 +8,39 @@
 }
 .cta-striper-bg {
     background-image: repeating-linear-gradient(135deg, rgba(151,151,151, 0.1) 0px, rgba(151,151,151, 0.1) 2px,transparent 2px, transparent 4px),linear-gradient(90deg, #06373A,#06373A);
+}
+
+@media (max-width:640px) {  
+  .hide-scrollbar::-webkit-scrollbar{
+    display: none;
   }
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+  background-color: #051a24; /* Couleur de fond de la barre de défilement */
+  border-radius: 6px;
+}
+
+.hide-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #ffffff; /* Couleur de la barre de défilement */
+  border-radius: 6px; /* Arrondi des coins de la barre de défilement */
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+.hide-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: #1F5F5B; /* Couleur au survol de la barre de défilement */
+}
+
+body::-webkit-scrollbar {
+  background-color: #051a24; /* Couleur de fond de la barre de défilement */
+  
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #ffffff; /* Couleur de la barre de défilement */
+  border-radius: 6px; /* Arrondi des coins de la barre de défilement */
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background-color: #1F5F5B; /* Couleur au survol de la barre de défilement */
+}
