--- a/src/input.css
+++ b/src/input.css
@@ -9,7 +9,9 @@
 .cta-striper-bg {
     background-image: repeating-linear-gradient(135deg, rgba(151,151,151, 0.1) 0px, rgba(151,151,151, 0.1) 2px,transparent 2px, transparent 4px),linear-gradient(90deg, #06373A,#06373A);
 }
-
+.cta-striper-contact {
+  background-image: radial-gradient(circle at center center, rgba(33,33,33,0),rgb(5,26,36)),repeating-linear-gradient(135deg, rgb(5,26,36) 0px, rgb(5,26,36) 1px,transparent 1px, transparent 4px),repeating-linear-gradient(45deg, rgb(6,55,58) 0px, rgb(6,55,58) 5px,transparent 5px, transparent 6px),linear-gradient(90deg, rgb(5,26,36),rgb(5,26,36));
+}
 @media (max-width:640px) {  
   .hide-scrollbar::-webkit-scrollbar{
     display: none;
@@ -17,6 +19,7 @@
 }
 
 .hide-scrollbar::-webkit-scrollbar {
+  height: 6px;
   background-color: #051a24; /* Couleur de fond de la barre de défilement */
   border-radius: 6px;
 }
@@ -24,7 +27,6 @@
 .hide-scrollbar::-webkit-scrollbar-thumb {
   background-color: #ffffff; /* Couleur de la barre de défilement */
   border-radius: 6px; /* Arrondi des coins de la barre de défilement */
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
 .hide-scrollbar::-webkit-scrollbar-thumb:hover {
@@ -32,6 +34,7 @@
 }
 
 body::-webkit-scrollbar {
+  width: 6px;
   background-color: #051a24; /* Couleur de fond de la barre de défilement */
   
 }
